--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Three.js Solar System</title>
     <style>
         body,
@@ -164,7 +165,30 @@
         background-color: #fff;
         }
 
-        
+        .speed-modifiers {
+        display: none;
+        flex-direction: row; 
+        gap: 10px; 
+        position: fixed; 
+        bottom: 20px; 
+        right: 20px; 
+        z-index: 1000;
+        }
+
+        .speed-modifiers button {
+            padding: 10px 20px; 
+            font-size: 16px;
+            cursor: pointer; 
+            background-color: rgba(110,110,110,1); 
+            color: white;
+            border: none; 
+            border-radius: 5px; 
+            transition: background-color 0.3s; 
+        }
+
+        .speed-modifiers button:hover {
+            background-color: rgba(50,50,50,1);
+        }
     </style>
 </head>
 
@@ -202,6 +226,15 @@
         <input id="speedSlider" type="range" min="-10" max="10" value="1" step="0.1" style="width: 150px;">
         <span id="speedValue">1x</span>
     </div>
+
+    <div class="speed-modifiers" id = "speedModifier">
+        <button id="super-prev"><i class="fas fa-backward"></i></button>
+        <button id="prev"><i class="fas fa-step-backward"></i></button>
+        <button id="pause-play"><i class="fas fa-play"></i><i class="fas fa-pause"></i></button>
+        <button id="fast-forward"><i class="fas fa-step-forward"></i></button>
+        <button id="super-fast"><i class="fas fa-forward"></i></button>
+    </div>
+
     <script type="module" src="main.js"></script>
 </body>
 
