--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Michroma:wght@400;700&display=swap">
     <title>Three.js Solar System</title>
     <style>
         body,
@@ -210,13 +212,13 @@
         <h1 style = "color: white;
         font-size: 40px;
         margin-bottom: 100px;
-        font-family:'Verdana'">Solar System Viewer</h1>
+        font-family:'Michroma'">Solar System Viewer</h1>
         
 
         <button class="button" id = "button">
             <span class="button_lg">
                 <span class="button_sl"></span>
-                <span class="button_text">START</span>
+                <span class="button_text" style=" font-family:'Michroma">Begin</span>
             </span>
         </button>
     </div>
