--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Michroma:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
     <title>Solar System Explorer</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -34,10 +36,10 @@
           color: white;
           font-size: 40px;
           margin-bottom: 100px;
-          font-family: 'Verdana';
+          font-family: 'Michroma';
         "
       >
-        Solar System Viewer
+        The Solar System
       </h1>
 
       <button class="button" id="button">
@@ -88,7 +90,7 @@
 
     <div id = "assistant">
         <button id="closeButton" title="Close">✖</button>
-        <h2 style = "font-family: Verdana; align-self: center">Celestial Guide</h2>
+        <h2 style = "font-family: Michroma; align-self: center">Celestial Guide</h2>
         <textarea id="userInput" placeholder="What would you like to learn?" rows="4" cols="50" style = "width: 300px; height: 100px;"></textarea>
         <button id="sendMessage">Ask KeplerAI</button>
         <pre id="response"></pre>
